Fix display of number of loans and alignment of loans list bottom buttons and total count. Fix calculation of totals when paging is used in loans list.

--- a/themes/finna2/less/finna/myresearch.less
+++ b/themes/finna2/less/finna/myresearch.less
@@ -117,7 +117,6 @@
     width: 10%;
   }
   .myresearch-count {
-    float: right;
     line-height: 40px;
     font-weight: bold;
     &.no-buttons {
